# src/api/produtos.js
@@ -5,18 +5,14 @@ const ProdutoService = require('../services/produtos');
 
 const produtoService = new ProdutoService(produtos);
 
-router.get('/', async (req, res, next) => {
-  res.header("Access-Control-Allow-Origin", '*');
-  res.header("Access-Control-Allow-Credentials", true);
-  res.header('Access-Control-Allow-Methods', 'GET,PUT,POST,DELETE,OPTIONS');
-  res.header("Access-Control-Allow-Headers", 'Origin,X-Requested-With,Content-Type,Accept,content-type,application/json');
-  next();
+router.get('/', async (req, res) => {
+
   /*
     #swagger.tags = ['Produtos']
     #swagger.description = 'Endpoint para obter listagem de todos os produtos.'
 
     #swagger.responses[200] = {
-      schema: { $ref: "#/definitions/produtos"},
+      schema: { $ref: "#/definitions/Produtos"},
       description: 'Produtos encontrados',
 
     }
